--- a/smos-report/smos-report.cabal
+++ b/smos-report/smos-report.cabal
@@ -57,6 +57,7 @@ library
     , cursor
     , deepseq
     , envparse
+    , hashable
     , megaparsec
     , microlens
     , optparse-applicative
