--- a/smos-report/smos-report.cabal
+++ b/smos-report/smos-report.cabal
@@ -1,6 +1,6 @@
 cabal-version: 1.12
 
--- This file has been generated from package.yaml by hpack version 0.34.6.
+-- This file has been generated from package.yaml by hpack version 0.34.7.
 --
 -- see: https://github.com/sol/hpack
 
@@ -57,6 +57,7 @@ library
     , cursor
     , deepseq
     , envparse
+    , hashable
     , megaparsec
     , microlens
     , optparse-applicative
