Basic haircut recurrence & colours

--- a/smos-scheduler/package.yaml
+++ b/smos-scheduler/package.yaml
@@ -20,6 +20,7 @@ library:
     - autodocodec
     - autodocodec-yaml
     - bytestring
+    - conduit
     - containers
     - cron
     - envparse
@@ -32,6 +33,7 @@ library:
     - path-io
     - pretty-relative-time
     - pretty-show
+    - safe
     - safe-coloured-text
     - safe-coloured-text-layout
     - safe-coloured-text-terminfo
