--- a/smos-scheduler/smos-scheduler.cabal
+++ b/smos-scheduler/smos-scheduler.cabal
@@ -41,6 +41,7 @@ library
     , autodocodec-yaml
     , base
     , bytestring
+    , conduit
     , containers
     , cron
     , envparse
@@ -53,6 +54,7 @@ library
     , path-io
     , pretty-relative-time
     , pretty-show
+    , safe
     , safe-coloured-text
     , safe-coloured-text-layout
     , safe-coloured-text-terminfo
