Support years and months in the time value

--- a/smos-report/smos-report.cabal
+++ b/smos-report/smos-report.cabal
@@ -74,3 +74,16 @@ library
     , validity-time
     , yaml
   default-language: Haskell2010
+
+test-suite smos-report-dummy-test
+  type: exitcode-stdio-1.0
+  main-is: Spec.hs
+  other-modules:
+      Paths_smos_report
+  hs-source-dirs:
+      test
+  ghc-options: -threaded -rtsopts -with-rtsopts=-N
+  build-depends:
+      base
+    , smos-report
+  default-language: Haskell2010
