--- a/smos-report/package.yaml
+++ b/smos-report/package.yaml
@@ -36,3 +36,15 @@ library:
   - validity-path
   - validity-time
   - yaml
+
+tests:
+  smos-report-dummy-test:
+    main: Spec.hs
+    source-dirs: test
+    ghc-options:
+    - -threaded
+    - -rtsopts
+    - -with-rtsopts=-N
+    dependencies:
+    - smos-report
+
