--- a/stack.yaml
+++ b/stack.yaml
@@ -31,7 +31,7 @@ packages:
 
 # These are duplicated in nix/overlay.
 ghc-options:
-  "$locals": -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates -Wpartial-fields -Widentities -Wredundant-constraints -Wcpp-undef
+  "$locals": -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates -Wpartial-fields -Widentities -Wredundant-constraints -Wcpp-undef -O0 -freverse-errors
   smos-stripe-client: -w # Turn off warnings for the generated code.
 
 extra-deps:
@@ -191,5 +191,7 @@ flags:
   zip:
     disable-bzip2: true
 
+system-ghc: true
+with-hpack: hpack
 nix:
-  shell-file: shell.nix
+  enable: false # We enter the shell manually.
