tried to fix CI

--- a/setup-stack.yaml
+++ b/setup-stack.yaml
@@ -13,6 +13,57 @@ extra-deps:
     - autodocodec-yaml
     - autodocodec-schema
 
+- github: NorfairKing/safe-coloured-text
+  commit: 675cb01fce5f46718416d7746de5b856ed90a63f
+  subdirs:
+  - safe-coloured-text
+  - safe-coloured-text-gen
+  - safe-coloured-text-layout
+  - safe-coloured-text-layout-gen
+  - safe-coloured-text-terminfo
+
+- github: NorfairKing/validity
+  commit: 8373ac5f0f02ad66f1b83c9bf572290430e84062
+  subdirs:
+    - genvalidity
+    - genvalidity-aeson
+    - genvalidity-bytestring
+    - genvalidity-containers
+    - genvalidity-criterion
+    - genvalidity-hspec
+    - genvalidity-hspec-aeson
+    - genvalidity-hspec-binary
+    - genvalidity-hspec-cereal
+    - genvalidity-hspec-hashable
+    - genvalidity-hspec-optics
+    - genvalidity-hspec-persistent
+    - genvalidity-path
+    - genvalidity-persistent
+    - genvalidity-property
+    - genvalidity-scientific
+    - genvalidity-sydtest
+    - genvalidity-sydtest-aeson
+    - genvalidity-sydtest-hashable
+    - genvalidity-sydtest-lens
+    - genvalidity-sydtest-persistent
+    - genvalidity-text
+    - genvalidity-time
+    - genvalidity-unordered-containers
+    - genvalidity-uuid
+    - genvalidity-vector
+    - validity
+    - validity-aeson
+    - validity-bytestring
+    - validity-containers
+    - validity-path
+    - validity-persistent
+    - validity-primitive
+    - validity-scientific
+    - validity-text
+    - validity-time
+    - validity-unordered-containers
+    - validity-uuid
+    - validity-vector
 
 system-ghc: true
 with-hpack: hpack
