--- a/.hlint.yaml
+++ b/.hlint.yaml
@@ -13,6 +13,8 @@
 - ignore:
     name: "Use Just"
 - ignore:
+    name: "Use void"
+- ignore:
     name: "Reduce duplication"
 - ignore:
     name: "Redundant do"
