--- a/smos-api-gen/smos-api-gen.cabal
+++ b/smos-api-gen/smos-api-gen.cabal
@@ -1,6 +1,6 @@
 cabal-version: 1.12
 
--- This file has been generated from package.yaml by hpack version 0.34.6.
+-- This file has been generated from package.yaml by hpack version 0.34.7.
 --
 -- see: https://github.com/sol/hpack
 
@@ -48,14 +48,11 @@ test-suite smos-api-test
   build-tool-depends:
       sydtest-discover:sydtest-discover
   build-depends:
-      QuickCheck
-    , aeson
-    , aeson-pretty
+      aeson
     , base
     , bytestring
     , containers
     , dirforest
-    , genvalidity
     , genvalidity-sydtest
     , genvalidity-sydtest-aeson
     , mergeful
@@ -81,12 +78,9 @@ benchmark smos-api-bench
       bench/
   ghc-options: -Wall
   build-depends:
-      QuickCheck
-    , base
+      base
     , criterion
-    , genvalidity
     , genvalidity-criterion
-    , genvalidity-uuid
     , smos-api
     , smos-api-gen
   default-language: Haskell2010
