--- a/smos-github/smos-github.cabal
+++ b/smos-github/smos-github.cabal
@@ -1,6 +1,6 @@
 cabal-version: 1.12
 
--- This file has been generated from package.yaml by hpack version 0.34.6.
+-- This file has been generated from package.yaml by hpack version 0.34.7.
 --
 -- see: https://github.com/sol/hpack
 
@@ -52,7 +52,6 @@ library
     , text
     , time
     , validity
-    , validity-path
     , validity-text
   default-language: Haskell2010
 
@@ -82,8 +81,7 @@ test-suite smos-data-test
   build-tool-depends:
       sydtest-discover:sydtest-discover
   build-depends:
-      QuickCheck
-    , base
+      base
     , genvalidity
     , genvalidity-sydtest
     , genvalidity-text
