--- a/smos-notify/smos-notify.cabal
+++ b/smos-notify/smos-notify.cabal
@@ -1,6 +1,6 @@
 cabal-version: 1.12
 
--- This file has been generated from package.yaml by hpack version 0.34.6.
+-- This file has been generated from package.yaml by hpack version 0.34.7.
 --
 -- see: https://github.com/sol/hpack
 
@@ -27,8 +27,7 @@ library
       src/
   ghc-options: -Wall
   build-depends:
-      aeson
-    , autodocodec
+      autodocodec
     , base
     , conduit
     , containers
@@ -40,7 +39,6 @@ library
     , path-io
     , persistent
     , persistent-sqlite
-    , persistent-template
     , pretty-relative-time
     , pretty-show
     , process
