--- a/smos-report-cursor-gen/smos-report-cursor-gen.cabal
+++ b/smos-report-cursor-gen/smos-report-cursor-gen.cabal
@@ -40,7 +40,6 @@ library
     , smos-report
     , smos-report-cursor
     , smos-report-gen
-    , time
   default-language: Haskell2010
 
 test-suite smos-report-cursor-test
@@ -62,18 +61,14 @@ test-suite smos-report-cursor-test
   build-depends:
       QuickCheck
     , base >=4.9 && <=5
-    , containers
-    , genvalidity-path
     , genvalidity-sydtest
     , genvalidity-sydtest-lens
-    , path
     , smos-data-gen
     , smos-report
     , smos-report-cursor
     , smos-report-cursor-gen
     , smos-report-gen
     , sydtest
-    , time
   default-language: Haskell2010
 
 benchmark smos-report-cursor-bench
@@ -85,21 +80,16 @@ benchmark smos-report-cursor-bench
       bench/
   ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall
   build-depends:
-      QuickCheck
-    , base >=4.9 && <=5
-    , containers
+      base >=4.9 && <=5
     , criterion
-    , cursor
     , genvalidity
     , genvalidity-containers
     , genvalidity-criterion
     , genvalidity-path
-    , path
     , smos-data
     , smos-data-gen
     , smos-report
     , smos-report-cursor
     , smos-report-cursor-gen
-    , smos-report-gen
     , time
   default-language: Haskell2010
