--- a/smos-sync-client-gen/smos-sync-client-gen.cabal
+++ b/smos-sync-client-gen/smos-sync-client-gen.cabal
@@ -1,6 +1,6 @@
 cabal-version: 1.12
 
--- This file has been generated from package.yaml by hpack version 0.34.6.
+-- This file has been generated from package.yaml by hpack version 0.34.7.
 --
 -- see: https://github.com/sol/hpack
 
@@ -36,17 +36,13 @@ library
     , genvalidity >=1.0
     , genvalidity-dirforest
     , genvalidity-sydtest
-    , mergeful
     , monad-logger
     , path
     , path-io
     , persistent-sqlite
-    , pretty-show
-    , resource-pool
     , servant-client
     , smos-api
     , smos-api-gen
-    , smos-server-gen
     , smos-sync-client
     , sydtest
     , sydtest-persistent-sqlite
@@ -74,11 +70,9 @@ test-suite smos-sync-client-test
       sydtest-discover:sydtest-discover
   build-depends:
       QuickCheck
-    , async
     , base
     , bytestring
     , containers
-    , genvalidity
     , genvalidity-bytestring
     , genvalidity-path
     , genvalidity-sydtest
@@ -89,12 +83,10 @@ test-suite smos-sync-client-test
     , path-io
     , persistent-sqlite
     , resource-pool
-    , servant-auth-client
     , servant-auth-server
     , servant-client
     , smos-api
     , smos-api-gen
-    , smos-client
     , smos-server
     , smos-server-gen
     , smos-sync-client
@@ -114,13 +106,9 @@ benchmark smos-sync-client-bench
       bench/
   ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall
   build-depends:
-      QuickCheck
-    , base
+      base
     , criterion
-    , genvalidity
     , genvalidity-criterion
-    , smos-api
-    , smos-server-gen
     , smos-sync-client
     , smos-sync-client-gen
   default-language: Haskell2010
