Upgrade to brick 1.1

--- a/stack.yaml
+++ b/stack.yaml
@@ -35,6 +35,12 @@ ghc-options:
   smos-stripe-client: -w # Turn off warnings for the generated code.
 
 extra-deps:
+# Newer brick
+- brick-1.1
+- bimap-0.5.0@sha256:aba506d02a1c93fc2b50dcbe728d2a4d07cca89b7033945418061a0b08576ebd,1889
+- text-zipper-0.12@sha256:e96110598fc25e57a99ffcd8e583351af8b325b813aa5e3bd0adc627e3e02b6b,1472
+- vty-5.36@sha256:dfbb78ea924ad0ef66cff4bc223918240234508c3de139b34780038dafb5fc53,20859
+
 # Calendar
 - github: NorfairKing/iCalendar
   commit: e08c16dceaab4d15b0f00860512018bc64791f07
