--- a/smos-docs-site/smos-docs-site.cabal
+++ b/smos-docs-site/smos-docs-site.cabal
@@ -47,6 +47,7 @@ extra-source-files:
     content/changelogs/2022-06-27.markdown
     content/changelogs/2022-07-22.markdown
     content/changelogs/2022-08-20.markdown
+    content/changelogs/2022-09-26.markdown
     content/pages/blogposts.markdown
     content/pages/building-installation.markdown
     content/pages/cheat-sheet.markdown
