--- a/.github/workflows/nix-build.yml
+++ b/.github/workflows/nix-build.yml
@@ -30,9 +30,9 @@ jobs:
         then
           sudo rm -rf /opt
         fi
-    - uses: cachix/cachix-action@v11
+    - uses: cachix/cachix-action@v12
       with:
         name: smos
-        extraPullNames: validity,safe-coloured-text,sydtest,autodocodec,mergeless,mergeful,seocheck,linkcheck,autorecorder,cursor,fuzzy-time
+        extraPullNames: validity,safe-coloured-text,sydtest,autodocodec,mergeless,mergeful,dirforest,looper,autorecorder,cursor,fuzzy-time,cursor-dirforest,feedback
         signingKey: '${{ secrets.CACHIX_SIGNING_KEY }}'
     - run: nix build "${{matrix.attribute}}"
