--- a/.github/workflows/nix-build.yml
+++ b/.github/workflows/nix-build.yml
@@ -33,6 +33,6 @@ jobs:
     - uses: cachix/cachix-action@v12
       with:
         name: smos
-        extraPullNames: validity,safe-coloured-text,sydtest,autodocodec,mergeless,mergeful,dirforest,looper,autorecorder,cursor,fuzzy-time,cursor-dirforest,feedback
+        extraPullNames: validity,safe-coloured-text,sydtest,autodocodec,mergeless,mergeful,dirforest,looper,autorecorder,cursor,time,cursor-dirforest,feedback
         signingKey: '${{ secrets.CACHIX_SIGNING_KEY }}'
     - run: nix build "${{matrix.attribute}}"
