Expose a smos app

--- a/.github/workflows/nix-build.yml
+++ b/.github/workflows/nix-build.yml
@@ -5,17 +5,18 @@ on:
     branches: [development, master]
 jobs:
   build:
-    name: ${{ matrix.attribute }} / ${{ matrix.os }}
+    name: ${{ matrix.command }} / ${{ matrix.os }}
     runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
       matrix:
         os:
           - ubuntu-latest
-        attribute:
-          - .#devShells.x86_64-linux.default
-          - .#packages.x86_64-linux.default
-          - .#checks.x86_64-linux.pre-commit
+        command:
+          - build .#devShells.x86_64-linux.default
+          - build .#packages.x86_64-linux.default
+          - build .#checks.x86_64-linux.pre-commit
+          - check --no-build
     steps:
     - uses: actions/checkout@v2.5.0
     - uses: cachix/install-nix-action@v18
@@ -34,4 +35,4 @@ jobs:
         name: smos
         extraPullNames: validity,safe-coloured-text,sydtest,autodocodec,mergeless,mergeful,dirforest,looper,autorecorder,cursor,cursor-dirforest,feedback
         signingKey: '${{ secrets.CACHIX_SIGNING_KEY }}'
-    - run: nix build "${{matrix.attribute}}"
+    - run: nix build "${{matrix.command}}"
