Use the default zstd compression level instead of the maximum

--- a/smos-server/smos-server.cabal
+++ b/smos-server/smos-server.cabal
@@ -14,6 +14,7 @@ build-type:     Simple
 
 library
   exposed-modules:
+      Codec.Compression.Zstd.Extended
       Smos.Server
       Smos.Server.Backup
       Smos.Server.Constants
