--- a/smos-docs-site/smos-docs-site.cabal
+++ b/smos-docs-site/smos-docs-site.cabal
@@ -49,6 +49,7 @@ extra-source-files:
     content/changelogs/2022-08-20.markdown
     content/changelogs/2022-09-26.markdown
     content/changelogs/2022-11-11.markdown
+    content/changelogs/2022-11-15.markdown
     content/pages/blogposts.markdown
     content/pages/building-installation.markdown
     content/pages/cheat-sheet.markdown
