Upgrade to nixos 22.11

--- a/smos-api-gen/smos-api-gen.cabal
+++ b/smos-api-gen/smos-api-gen.cabal
@@ -11,6 +11,39 @@ author:         Tom Sydney Kerckhove
 maintainer:     syd@cs-syd.eu
 license:        MIT
 build-type:     Simple
+extra-source-files:
+    test_resources/api-version/output.json
+    test_resources/backup-get/input/v0.1.0.json
+    test_resources/backup-get/input/v0.2.0.json
+    test_resources/backup-get/input/v0.2.1.json
+    test_resources/backup-get/input/v0.3.0.json
+    test_resources/backup-post/output.json
+    test_resources/backups/output.json
+    test_resources/file-get/output.json
+    test_resources/file-put/input/v0.0.0.json
+    test_resources/file-put/input/v0.1.0.json
+    test_resources/file-put/input/v0.2.0.json
+    test_resources/file-put/input/v0.2.1.json
+    test_resources/file-put/input/v0.3.0.json
+    test_resources/files/output.json
+    test_resources/login/input/v0.0.0.json
+    test_resources/login/input/v0.1.0.json
+    test_resources/login/input/v0.2.0.json
+    test_resources/login/input/v0.2.1.json
+    test_resources/login/input/v0.3.0.json
+    test_resources/register/input/v0.0.0.json
+    test_resources/register/input/v0.1.0.json
+    test_resources/register/input/v0.2.0.json
+    test_resources/register/input/v0.2.1.json
+    test_resources/register/input/v0.3.0.json
+    test_resources/report/agenda/output.json
+    test_resources/report/next/output.json
+    test_resources/sync/input/v0.0.0.json
+    test_resources/sync/input/v0.1.0.json
+    test_resources/sync/input/v0.2.0.json
+    test_resources/sync/input/v0.2.1.json
+    test_resources/sync/input/v0.3.0.json
+    test_resources/sync/output.json
 
 library
   exposed-modules:
