Got the smos-calendar-import test suite to compile

--- a/smos-calendar-import/package.yaml
+++ b/smos-calendar-import/package.yaml
@@ -74,6 +74,7 @@ tests:
     - genvalidity-sydtest-aeson
     - genvalidity-text
     - genvalidity-time
+    - ical
     - ical-gen
     - ical-recurrence-gen
     - path
