failing tests that actually run!

--- a/smos-calendar-import/package.yaml
+++ b/smos-calendar-import/package.yaml
@@ -68,6 +68,7 @@ tests:
     - bytestring
     - containers
     - data-default
+    - deepseq
     - genvalidity
     - genvalidity-containers
     - genvalidity-sydtest
