Get things to compile with timezone resolution

--- a/smos-calendar-import/package.yaml
+++ b/smos-calendar-import/package.yaml
@@ -19,6 +19,7 @@ library:
     - async
     - autodocodec
     - bytestring
+    - case-insensitive
     - containers
     - data-default
     - dlist
