--- a/smos-calendar-import/smos-calendar-import.cabal
+++ b/smos-calendar-import/smos-calendar-import.cabal
@@ -165,6 +165,7 @@ library
     , autodocodec
     , base
     , bytestring
+    , case-insensitive
     , containers
     , data-default
     , dlist
