--- a/smos-calendar-import/smos-calendar-import.cabal
+++ b/smos-calendar-import/smos-calendar-import.cabal
@@ -15,126 +15,147 @@ extra-source-files:
     test_resources/daily-bysetpos.config
     test_resources/daily-bysetpos.events
     test_resources/daily-bysetpos.ics
+    test_resources/daily-bysetpos.parsed
     test_resources/daily-bysetpos.recurring
     test_resources/daily-bysetpos.smos
     test_resources/daily-bysetpos.unresolved
     test_resources/date.config
     test_resources/date.events
     test_resources/date.ics
+    test_resources/date.parsed
     test_resources/date.recurring
     test_resources/date.smos
     test_resources/date.unresolved
     test_resources/duration-time.config
     test_resources/duration-time.events
     test_resources/duration-time.ics
+    test_resources/duration-time.parsed
     test_resources/duration-time.recurring
     test_resources/duration-time.smos
     test_resources/duration-time.unresolved
     test_resources/duration-weeks.config
     test_resources/duration-weeks.events
     test_resources/duration-weeks.ics
+    test_resources/duration-weeks.parsed
     test_resources/duration-weeks.recurring
     test_resources/duration-weeks.smos
     test_resources/duration-weeks.unresolved
     test_resources/duration.config
     test_resources/duration.events
     test_resources/duration.ics
+    test_resources/duration.parsed
     test_resources/duration.recurring
     test_resources/duration.smos
     test_resources/duration.unresolved
     test_resources/empty.config
     test_resources/empty.events
     test_resources/empty.ics
+    test_resources/empty.parsed
     test_resources/empty.recurring
     test_resources/empty.smos
     test_resources/empty.unresolved
     test_resources/example.config
     test_resources/example.events
     test_resources/example.ics
+    test_resources/example.parsed
     test_resources/example.recurring
     test_resources/example.smos
     test_resources/example.unresolved
     test_resources/exception.config
     test_resources/exception.events
     test_resources/exception.ics
+    test_resources/exception.parsed
     test_resources/exception.recurring
     test_resources/exception.smos
     test_resources/exception.unresolved
     test_resources/ignored.config
     test_resources/ignored.events
     test_resources/ignored.ics
+    test_resources/ignored.parsed
     test_resources/ignored.recurring
     test_resources/ignored.smos
     test_resources/ignored.unresolved
     test_resources/minimal.config
     test_resources/minimal.events
     test_resources/minimal.ics
+    test_resources/minimal.parsed
     test_resources/minimal.recurring
     test_resources/minimal.smos
     test_resources/minimal.unresolved
     test_resources/museum.config
     test_resources/museum.events
     test_resources/museum.ics
+    test_resources/museum.parsed
     test_resources/museum.recurring
     test_resources/museum.smos
     test_resources/museum.unresolved
     test_resources/one-recurrence-invalid.config
     test_resources/one-recurrence-invalid.events
     test_resources/one-recurrence-invalid.ics
+    test_resources/one-recurrence-invalid.parsed
     test_resources/one-recurrence-invalid.recurring
     test_resources/one-recurrence-invalid.smos
     test_resources/one-recurrence-invalid.unresolved
     test_resources/rdate-period.config
     test_resources/rdate-period.events
     test_resources/rdate-period.ics
+    test_resources/rdate-period.parsed
     test_resources/rdate-period.recurring
     test_resources/rdate-period.smos
     test_resources/rdate-period.unresolved
     test_resources/rdate.config
     test_resources/rdate.events
     test_resources/rdate.ics
+    test_resources/rdate.parsed
     test_resources/rdate.recurring
     test_resources/rdate.smos
     test_resources/rdate.unresolved
     test_resources/uid.config
     test_resources/uid.events
     test_resources/uid.ics
+    test_resources/uid.parsed
     test_resources/uid.recurring
     test_resources/uid.smos
     test_resources/uid.unresolved
     test_resources/visit.config
     test_resources/visit.events
     test_resources/visit.ics
+    test_resources/visit.parsed
     test_resources/visit.recurring
     test_resources/visit.smos
     test_resources/visit.unresolved
     test_resources/zoned-border.config
     test_resources/zoned-border.events
     test_resources/zoned-border.ics
+    test_resources/zoned-border.parsed
     test_resources/zoned-border.recurring
     test_resources/zoned-border.smos
     test_resources/zoned-border.unresolved
     test_resources/zoned-complex.config
     test_resources/zoned-complex.events
     test_resources/zoned-complex.ics
+    test_resources/zoned-complex.parsed
     test_resources/zoned-complex.recurring
     test_resources/zoned-complex.smos
     test_resources/zoned-complex.unresolved
     test_resources/zoned-rdate.config
     test_resources/zoned-rdate.events
     test_resources/zoned-rdate.ics
+    test_resources/zoned-rdate.parsed
     test_resources/zoned-rdate.recurring
     test_resources/zoned-rdate.smos
     test_resources/zoned-rdate.unresolved
     test_resources/zoned-recurring.config
     test_resources/zoned-recurring.events
     test_resources/zoned-recurring.ics
+    test_resources/zoned-recurring.parsed
     test_resources/zoned-recurring.recurring
     test_resources/zoned-recurring.smos
     test_resources/zoned-recurring.unresolved
     test_resources/zoned.config
     test_resources/zoned.events
     test_resources/zoned.ics
+    test_resources/zoned.parsed
     test_resources/zoned.recurring
     test_resources/zoned.smos
     test_resources/zoned.unresolved
